Fixed CSS for proper menu transition on mobile

--- a/app/assets/stylesheets/simple-sidebar.scss
+++ b/app/assets/stylesheets/simple-sidebar.scss
@@ -19,6 +19,7 @@ body {
 		#page-content-wrapper {
 			position: absolute;
 			margin-right: -250px;
+			left: 0;
 		}
 	}
 }
@@ -38,6 +39,7 @@ body {
 	width: 100%;
 	position: absolute;
 	padding: 15px;
+	left: 0;
 }
 .sidebar-nav {
 	position: absolute;
